# htmx-bem-tailwindcss

./: pyproject.toml
src/: .editorconfig  Makefile  db.sqlite3  tailwind.config.js
src/conf/: asgi.py  settings.py  urls.py
src/store/: models.py  urls.py  views.py
src/store/migrations/: 0001_initial.py
src/store/templates/: author_list_create.html
src/templates/: base.html  base_htmx.html  buttons.html  dashboard.html  modals.html  test_modal.html
src/templates/ui/: form_modal.html  modal.html
