[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Krystof Rehacek <krystofee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]

python = "3.12.1"
requests = "^2.31.0"
django-extensions = "^3.2.3"
django-htmx = "^1.17.2"
django-browser-reload = "^1.12.1"
django-debug-toolbar = "^4.2.0"
django = "^5.0.1"
werkzeug = "^3.0.1"
slippers = "^0.6.2"
dominate = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
